--- a/config/samples/apps_v1alpha1_appdeployment.yaml
+++ b/config/samples/apps_v1alpha1_appdeployment.yaml
@@ -1,8 +1,21 @@
 apiVersion: apps.lyrid.io/v1alpha1
 kind: AppDeployment
 metadata:
-  name: my-app
-  namespace: default
+  name: swift-web-app
+  namespace: lyrid-e7613fd3-8ec2-4ea3-9c3f-81297dca805c
 spec:
-  image: hello-world:latest
-  replicas: 2
+  revisionId: test-revision
+  bearerToken: this-is-jwt-token
+  image: harbor.apsoutheast1.lyr.id/azhary/swift-web-app:2024-10-04
+  replicas: 1
+  ports:
+    - name: http
+      containerPort: 3000
+      protocol: TCP
+  resources:
+    requests:
+      memory: 129Mi
+      cpu: 101m
+    limits:
+      memory: 513Mi
+      cpu: 501m
