--- a/config/crd/bases/apps.lyrid.io_appdeployments.yaml
+++ b/config/crd/bases/apps.lyrid.io_appdeployments.yaml
@@ -39,61 +39,158 @@ spec:
           spec:
             description: AppDeploymentSpec defines the desired state of AppDeployment
             properties:
-              revisionId:
-                type: string
               bearerToken:
                 type: string
               image:
+                description: |-
+                  Foo is an example field of AppDeployment. Edit appdeployment_types.go to remove/update
+                  Image is the Docker image to deploy
                 type: string
+              ports:
+                items:
+                  description: ContainerPort represents a network port in a single
+                    container.
+                  properties:
+                    containerPort:
+                      description: |-
+                        Number of port to expose on the pod's IP address.
+                        This must be a valid port number, 0 < x < 65536.
+                      format: int32
+                      type: integer
+                    hostIP:
+                      description: What host IP to bind the external port to.
+                      type: string
+                    hostPort:
+                      description: |-
+                        Number of port to expose on the host.
+                        If specified, this must be a valid port number, 0 < x < 65536.
+                        If HostNetwork is specified, this must match ContainerPort.
+                        Most containers do not need this.
+                      format: int32
+                      type: integer
+                    name:
+                      description: |-
+                        If specified, this must be an IANA_SVC_NAME and unique within the pod. Each
+                        named port in a pod must have a unique name. Name for the port that can be
+                        referred to by services.
+                      type: string
+                    protocol:
+                      default: TCP
+                      description: |-
+                        Protocol for port. Must be UDP, TCP, or SCTP.
+                        Defaults to "TCP".
+                      type: string
+                  required:
+                  - containerPort
+                  type: object
+                type: array
               replicas:
                 description: Replicas defines the number of replicas
                 format: int32
                 type: integer
-              ports:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    name:
-                      type: string
-                    containerPort:
-                      format: int32
-                      type: integer
-                    protocol:
-                      type: string
-                      enum:
-                        - TCP
-                        - UDP
               resources:
-                type: object
+                description: ResourceRequirements describes the compute resource requirements.
                 properties:
-                  requests:
-                    type: object
-                    properties:
-                      cpu:
-                        type: string
-                      memory:
-                        type: string
+                  claims:
+                    description: |-
+                      Claims lists the names of resources, defined in spec.resourceClaims,
+                      that are used by this container.
+
+
+                      This is an alpha field and requires enabling the
+                      DynamicResourceAllocation feature gate.
+
+
+                      This field is immutable. It can only be set for containers.
+                    items:
+                      description: ResourceClaim references one entry in PodSpec.ResourceClaims.
+                      properties:
+                        name:
+                          description: |-
+                            Name must match the name of one entry in pod.spec.resourceClaims of
+                            the Pod where this field is used. It makes that resource available
+                            inside a container.
+                          type: string
+                      required:
+                      - name
+                      type: object
+                    type: array
+                    x-kubernetes-list-map-keys:
+                    - name
+                    x-kubernetes-list-type: map
                   limits:
+                    additionalProperties:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    description: |-
+                      Limits describes the maximum amount of compute resources allowed.
+                      More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
                     type: object
-                    properties:
-                      cpu:
-                        type: string
-                      memory:
-                        type: string
+                  requests:
+                    additionalProperties:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    description: |-
+                      Requests describes the minimum amount of compute resources required.
+                      If Requests is omitted for a container, it defaults to Limits if that is explicitly specified,
+                      otherwise to an implementation-defined value. Requests cannot exceed Limits.
+                      More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+                    type: object
+                type: object
+              revisionId:
+                type: string
               volumeMounts:
-                type: array
                 items:
-                  type: object
+                  description: VolumeMount describes a mounting of a Volume within
+                    a container.
                   properties:
-                    name:
-                      type: string
                     mountPath:
+                      description: |-
+                        Path within the container at which the volume should be mounted.  Must
+                        not contain ':'.
                       type: string
+                    mountPropagation:
+                      description: |-
+                        mountPropagation determines how mounts are propagated from the host
+                        to container and the other way around.
+                        When not set, MountPropagationNone is used.
+                        This field is beta in 1.10.
+                      type: string
+                    name:
+                      description: This must match the Name of a Volume.
+                      type: string
+                    readOnly:
+                      description: |-
+                        Mounted read-only if true, read-write otherwise (false or unspecified).
+                        Defaults to false.
+                      type: boolean
+                    subPath:
+                      description: |-
+                        Path within the volume from which the container's volume should be mounted.
+                        Defaults to "" (volume's root).
+                      type: string
+                    subPathExpr:
+                      description: |-
+                        Expanded path within the volume from which the container's volume should be mounted.
+                        Behaves similarly to SubPath but environment variable references $(VAR_NAME) are expanded using the container's environment.
+                        Defaults to "" (volume's root).
+                        SubPathExpr and SubPath are mutually exclusive.
+                      type: string
+                  required:
+                  - mountPath
+                  - name
+                  type: object
+                type: array
             required:
-              - bearerToken
-              - image
-              - replicas
+            - bearerToken
+            - image
+            - replicas
             type: object
           status:
             description: AppDeploymentStatus defines the observed state of AppDeployment
