--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - apps_v1alpha1_appdeployment.yaml
+- apps_v1alpha1_revision.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
