--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,11 @@
 resources:
 - bases/apps.lyrid.io_appdeployments.yaml
 - bases/apps.lyrid.io_revisions.yaml
+- bases/apps.lyrid.io_appmodules.yaml
+- bases/apps.lyrid.io_functions.yaml
+- bases/apps.lyrid.io_functioncodes.yaml
+- bases/apps.lyrid.io_deploymentendpoints.yaml
+- bases/apps.lyrid.io_subdomains.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -15,6 +20,11 @@ patches:
 # patches here are for enabling the CA injection for each CRD
 #- path: patches/cainjection_in_appdeployments.yaml
 #- path: patches/cainjection_in_revisions.yaml
+#- path: patches/cainjection_in_appmodules.yaml
+#- path: patches/cainjection_in_functions.yaml
+#- path: patches/cainjection_in_functioncodes.yaml
+#- path: patches/cainjection_in_deploymentendpoints.yaml
+#- path: patches/cainjection_in_subdomains.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
