--- a/config/crd/bases/apps.lyrid.io_appmodules.yaml
+++ b/config/crd/bases/apps.lyrid.io_appmodules.yaml
@@ -51,6 +51,14 @@ spec:
                 type: string
               description:
                 type: string
+              ref:
+                type: object
+                properties:
+                  appDeployment:
+                    type: object
+                    properties:
+                      name:
+                        type: string
             type: object
           status:
             description: AppModuleStatus defines the observed state of AppModule
