--- a/config/crd/bases/apps.lyrid.io_functions.yaml
+++ b/config/crd/bases/apps.lyrid.io_functions.yaml
@@ -49,6 +49,14 @@ spec:
                 type: string
               description:
                 type: string
+              ref:
+                type: object
+                properties:
+                  appDeployment:
+                    type: object
+                    properties:
+                      name:
+                        type: string
             type: object
           status:
             description: FunctionStatus defines the observed state of Function
