added observed generation to track crd changes

--- a/config/crd/bases/apps.lyrid.io_appmodules.yaml
+++ b/config/crd/bases/apps.lyrid.io_appmodules.yaml
@@ -63,6 +63,9 @@ spec:
           status:
             description: AppModuleStatus defines the observed state of AppModule
             type: object
+            properties:
+              observedGeneration:
+                type: integer
         type: object
     served: true
     storage: true
